chore(deps): 19860 maintenance, rearrangement, migrations, eol fix, reformat (#875)
* husky 9 migration 
* deps updates, cleanup
* eol normalization
* code reformat

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ on:
 env:
   NODE_ENV: production
   AVA_FORCE_CI: 'not-ci'
+  HUSKY: 0
   REGISTRY: ghcr.io
   IMAGE_REPO: ${{ github.repository }}
 
@@ -60,7 +61,7 @@ jobs:
           else
             echo "Translations are synced."
           fi
-      - run: pnpm i
+      - run: pnpm i --prod=false
       - run: pnpm run postinstall
       - run: pnpm run lint
       - run: pnpm run typecheck
@@ -88,7 +89,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i
+      - run: pnpm i --prod=false
       - run: pnpm run build
       - name: Display structure of builded files
         run: ls -R
