--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "uhtml": "^4.5.11",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "wretch": "^2.10.0"
+    "wretch": "^2.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -158,13 +158,13 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/gettext-parser": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/coverage-v8": "^2.1.4",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
-    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
+    "bundle-size-diff": "https://github.com/konturio/bundle-size-diff#v1.0.7",
     "chalk": "^5.3.0",
     "dependency-cruiser": "^16.5.0",
     "dotenv": "^16.4.5",
@@ -183,8 +183,6 @@
     "npm-run-all": "^4.1.5",
     "open-cli": "^8.0.0",
     "playwright-slack-report": "^1.1.88",
-    "postcss-custom-media": "^8.0.2",
-    "postcss-nested": "^6.2.0",
     "postcss-normalize": "^13.0.1",
     "prettier": "^3.3.3",
     "prompts": "^2.4.2",
@@ -196,14 +194,14 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended": "^14.0.1",
     "ts-json-schema-generator": "^2.3.0",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-plugin-css-modules": "^5.1.0",
     "vite": "5.4.10",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.4"
   },
   "pnpm": {
     "patchedDependencies": {
