--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,13 +1,15 @@
 {
   "extends": "stylelint-config-recommended",
   "rules": {
-    "at-rule-no-unknown": [true, { "ignoreAtRules": ["import-normalise"] }],
     "selector-nested-pattern": "^&",
     "selector-pseudo-class-no-unknown": [
       true,
       {
         "ignorePseudoClasses": ["global"]
       }
-    ]
+    ],
+    "no-descending-specificity": null,
+    "no-duplicate-selectors": true,
+    "block-no-empty": true
   }
 }
