--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,55 @@
+component_management:
+  individual_components:
+    - component_id: ui
+      name: UI Components
+      paths:
+        - src/components/**
+        - src/widgets/**
+        - src/views/**
+      statuses:
+        - type: project
+          target: 8%
+          threshold: 1%
+        - type: patch
+          target: 15%
+          threshold: 2%
+
+    - component_id: core
+      name: Core Logic
+      paths:
+        - src/core/**
+      statuses:
+        - type: project
+          target: 25%
+          threshold: 1%
+        - type: patch
+          target: 35%
+          threshold: 2%
+
+    - component_id: features
+      name: Features
+      paths:
+        - src/features/**
+      statuses:
+        - type: project
+          target: 15%
+          threshold: 1%
+        - type: patch
+          target: 25%
+          threshold: 2%
+
+    - component_id: utils
+      name: Utilities
+      paths:
+        - src/utils/**
+      statuses:
+        - type: project
+          target: 20%
+          threshold: 1%
+        - type: patch
+          target: 30%
+          threshold: 2%
+
 coverage:
   status:
     project:
@@ -5,71 +57,13 @@ coverage:
         target: 10%
         threshold: 1%
         informational: true
-      ui:
-        target: 8%
-        paths:
-          - "src/components/**"
-          - "src/widgets/**"
-          - "src/views/**"
-      core:
-        target: 25%
-        paths:
-          - "src/core/**"
-      features:
-        target: 15%
-        paths:
-          - "src/features/**"
-      utils:
-        target: 20%
-        paths:
-          - "src/utils/**"
-
-    patch:
-      default:
-        target: 20%
-        threshold: 2%
-      ui:
-        target: 15%
-        paths:
-          - "src/components/**"
-          - "src/widgets/**"
-          - "src/views/**"
-      core:
-        target: 35%
-        paths:
-          - "src/core/**"
-      features:
-        target: 25%
-        paths:
-          - "src/features/**"
-      utils:
-        target: 30%
-        paths:
-          - "src/utils/**"
-
-flags:
-  ui:
-    paths:
-      - src/components
-      - src/widgets
-      - src/views
-  core:
-    paths:
-      - src/core
-  features:
-    paths:
-      - src/features
-  utils:
-    paths:
-      - src/utils
 
 comment:
-  layout: "reach, diff, flags, files"
+  layout: "reach, diff, components, files"
   behavior: default
   require_changes: false
   require_base: false
   require_head: true
-  show_carryforward_flags: true
 
 ignore:
   # Config files
@@ -84,7 +78,7 @@ ignore:
   - 'i18next-scanner.config.cjs'
   - 'cosmos.vite.config.ts'
   - '.dependency-cruiser.cjs'
-  
+
   # Test-related files
   - '**/*.test.ts'
   - '**/*.test.tsx'
@@ -94,19 +88,19 @@ ignore:
   - '**/test/**'
   - '**/testing/**'
   - '**/vitest/**'
-  
+
   # Mock files
   - '**/__mocks__/**'
   - '**/mocks/**'
   - '**/*.mock.ts'
   - '**/*.mock.tsx'
-  
+
   # Fixture files
   - '**/__fixtures__/**'
   - '**/fixtures/**'
   - '**/*.fixture.ts'
   - '**/*.fixture.tsx'
-  
+
   # Test utilities
   - '**/test-utils/**'
   - '**/testUtils/**'
