--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "wretch": "^2.11.0"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.2.1",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.48.1",
     "@slack/web-api": "^7.7.0",
