--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ env:
   HUSKY: 0
   REGISTRY: ghcr.io
   IMAGE_REPO: ${{ github.repository }}
+  GH_COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
 
 jobs:
   test:
