--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - run: sudo apt-get update && sudo apt-get install -y gettext
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
