--- a/package.json
+++ b/package.json
@@ -81,10 +81,10 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "@reatom/core": "^3.9.0",
     "@reatom/core-v2": "^3.1.4",
-    "@reatom/framework": "^3.4.53",
+    "@reatom/framework": "^3.4.54",
     "@reatom/npm-react": "^3.10.0",
     "@reatom/react-v2": "^3.1.2",
-    "@sentry/react": "^8.35.0",
+    "@sentry/react": "^8.37.1",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -125,11 +125,10 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-conv": "15.0.0",
     "jwt-decode": "^4.0.0",
-    "keepalive-for-react": "^3.0.1",
+    "keepalive-for-react": "^3.0.2",
     "maplibre-gl": "^3.6.2",
     "markdown-to-jsx": "^7.5.0",
-    "mdast-util-from-markdown": "^2.0.1",
-    "nanoid": "^5.0.7",
+    "nanoid": "^5.0.8",
     "nanoid-dictionary": "^4.3.0",
     "nextafter": "^1.0.0",
     "papaparse": "^5.4.1",
@@ -138,35 +137,35 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-i18next": "^15.1.0",
+    "react-i18next": "^15.1.1",
     "react-lazily": "^0.9.2",
     "react-promise-suspense": "^0.3.4",
-    "react-router": "^6.27.0",
-    "react-router-dom": "^6.27.0",
+    "react-router": "^6.28.0",
+    "react-router-dom": "^6.28.0",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.12.0",
-    "recharts": "^2.13.0",
-    "uhtml": "^4.5.11",
+    "recharts": "^2.13.3",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "wretch": "^2.10.0"
+    "wretch": "^2.11.0"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.2.1",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.48.1",
     "@slack/web-api": "^7.7.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/gettext-parser": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/coverage-v8": "^2.1.4",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
-    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
+    "bundle-size-diff": "https://github.com/konturio/bundle-size-diff#v1.0.7",
     "chalk": "^5.3.0",
-    "dependency-cruiser": "^16.5.0",
+    "dependency-cruiser": "^16.6.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.3",
@@ -175,7 +174,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "happy-dom": "^15.7.4",
+    "happy-dom": "^15.11.0",
     "husky": "^9.1.6",
     "i18next-scanner": "^4.6.0",
     "lint-staged": "^15.2.10",
@@ -183,9 +182,6 @@
     "npm-run-all": "^4.1.5",
     "open-cli": "^8.0.0",
     "playwright-slack-report": "^1.1.88",
-    "postcss-custom-media": "^8.0.2",
-    "postcss-nested": "^6.2.0",
-    "postcss-normalize": "^13.0.1",
     "prettier": "^3.3.3",
     "prompts": "^2.4.2",
     "react-cosmos": "6.2.0",
@@ -196,20 +192,22 @@
     "stylelint": "^16.10.0",
     "stylelint-config-recommended": "^14.0.1",
     "ts-json-schema-generator": "^2.3.0",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-plugin-css-modules": "^5.1.0",
     "vite": "5.4.10",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.3"
+    "vite-tsconfig-paths": "^5.1.0",
+    "vitest": "^2.1.4"
   },
   "pnpm": {
     "patchedDependencies": {
       "@reatom/core-v2@3.1.4": "patches/@reatom__core-v2@3.1.4.patch"
     },
     "overrides": {
+      "@loaders.gl/worker-utils": "^3.4.15",
+      "@loaders.gl/core": "^3.4.14",
       "@reatom/utils": "^3.11.0"
     }
   }
