--- a/codecov.yml
+++ b/codecov.yml
@@ -1,75 +1,67 @@
-coverage:
-  status:
-    project:
-      default:
-        target: 10%
-        threshold: 1%
-        informational: true
-      ui:
-        target: 8%
-        paths:
-          - "src/components/**"
-          - "src/widgets/**"
-          - "src/views/**"
-      core:
-        target: 25%
-        paths:
-          - "src/core/**"
-      features:
-        target: 15%
-        paths:
-          - "src/features/**"
-      utils:
-        target: 20%
-        paths:
-          - "src/utils/**"
+component_management:
+  individual_components:
+    - component_id: ui
+      name: UI Components
+      paths:
+        - src/components/**
+        - src/widgets/**
+        - src/views/**
+      statuses:
+        - type: project
+          target: 8%
+          threshold: 1%
+        - type: patch
+          target: 15%
+          threshold: 2%
 
-    patch:
-      default:
-        target: 20%
-        threshold: 2%
-      ui:
-        target: 15%
-        paths:
-          - "src/components/**"
-          - "src/widgets/**"
-          - "src/views/**"
-      core:
-        target: 35%
-        paths:
-          - "src/core/**"
-      features:
-        target: 25%
-        paths:
-          - "src/features/**"
-      utils:
-        target: 30%
-        paths:
-          - "src/utils/**"
+    - component_id: core
+      name: Core Logic
+      paths:
+        - src/core/**
+      statuses:
+        - type: project
+          target: 25%
+          threshold: 1%
+        - type: patch
+          target: 35%
+          threshold: 2%
 
-flags:
-  ui:
-    paths:
-      - src/components
-      - src/widgets
-      - src/views
-  core:
-    paths:
-      - src/core
-  features:
-    paths:
-      - src/features
-  utils:
-    paths:
-      - src/utils
+    - component_id: features
+      name: Features
+      paths:
+        - src/features/**
+      statuses:
+        - type: project
+          target: 15%
+          threshold: 1%
+        - type: patch
+          target: 25%
+          threshold: 2%
+
+    - component_id: utils
+      name: Utilities
+      paths:
+        - src/utils/**
+      statuses:
+        - type: project
+          target: 20%
+          threshold: 1%
+        - type: patch
+          target: 30%
+          threshold: 2%
+
+github_checks:
+  annotations: false
 
 comment:
-  layout: "reach, diff, flags, files"
+  layout: 'condensed_header, diff, components, condensed_files, condensed_footer'
   behavior: default
   require_changes: false
   require_base: false
   require_head: true
-  show_carryforward_flags: true
+
+bundle_analysis:
+  status: 'informational'
 
 ignore:
   # Config files
@@ -84,7 +76,7 @@ ignore:
   - 'i18next-scanner.config.cjs'
   - 'cosmos.vite.config.ts'
   - '.dependency-cruiser.cjs'
-  
+
   # Test-related files
   - '**/*.test.ts'
   - '**/*.test.tsx'
@@ -94,19 +86,19 @@ ignore:
   - '**/test/**'
   - '**/testing/**'
   - '**/vitest/**'
-  
+
   # Mock files
   - '**/__mocks__/**'
   - '**/mocks/**'
   - '**/*.mock.ts'
   - '**/*.mock.tsx'
-  
+
   # Fixture files
   - '**/__fixtures__/**'
   - '**/fixtures/**'
   - '**/*.fixture.ts'
   - '**/*.fixture.tsx'
-  
+
   # Test utilities
   - '**/test-utils/**'
   - '**/testUtils/**'
