--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ VITE_STATIC_PATH=
 VITE_DEBUG_HMR=true
 VITE_DEBUG_RENDER_TRACKER=false
 # TODO: 20155 keepalive-for-react v3.0.2 doesn't work with Strict Mode. https://github.com/irychen/keepalive-for-react/blob/9356667eac5f574a3aac8e254ab29128b61a22ee/README.md
-# Disabling Strict Mode locally fixes the blank map after navigation issue.
-VITE_DEBUG_DISABLE_REACTSTRICTMODE=
+# Disabling Strict Mode fixes the blank map after navigation.
+VITE_DEBUG_DISABLE_REACTSTRICTMODE=true
