--- a/package.json
+++ b/package.json
@@ -80,10 +80,10 @@
     "@paypal/react-paypal-js": "^8.7.0",
     "@reatom/core": "^3.9.0",
     "@reatom/core-v2": "^3.1.4",
-    "@reatom/framework": "^3.4.54",
-    "@reatom/npm-react": "^3.10.0",
+    "@reatom/framework": "^3.4.55",
+    "@reatom/npm-react": "^3.10.2",
     "@reatom/react-v2": "^3.1.2",
-    "@sentry/react": "^8.37.1",
+    "@sentry/react": "^8.40.0",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -117,16 +117,16 @@
     "emoji-regex": "^10.4.0",
     "geojson-polygon-self-intersections": "^1.2.1",
     "gettext-parser": "^8.0.0",
-    "hash-wasm": "^4.11.0",
+    "hash-wasm": "^4.12.0",
     "history": "^5.3.0",
     "hsluv": "^1.0.1",
-    "i18next": "^23.16.4",
+    "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-conv": "15.0.0",
     "jwt-decode": "^4.0.0",
-    "keepalive-for-react": "^3.0.2",
+    "keepalive-for-react": "^3.0.3",
     "maplibre-gl": "^3.6.2",
-    "markdown-to-jsx": "^7.5.0",
+    "markdown-to-jsx": "^7.7.0",
     "nanoid": "^5.0.8",
     "nanoid-dictionary": "^4.3.0",
     "nextafter": "^1.0.0",
@@ -142,24 +142,24 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.12.0",
+    "react-virtuoso": "^4.12.1",
     "recharts": "^2.13.3",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
     "wretch": "^2.11.0"
   },
   "devDependencies": {
-    "@codecov/vite-plugin": "^1.2.1",
+    "@codecov/vite-plugin": "^1.4.0",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.48.2",
     "@slack/web-api": "^7.7.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/gettext-parser": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
-    "@typescript-eslint/parser": "^8.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "@vitest/coverage-v8": "^2.1.4",
+    "@vitest/coverage-v8": "^2.1.5",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
     "bundle-size-diff": "https://github.com/konturio/bundle-size-diff#v1.0.7",
@@ -173,8 +173,8 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "happy-dom": "^15.11.0",
-    "husky": "^9.1.6",
+    "happy-dom": "^15.11.6",
+    "husky": "^9.1.7",
     "i18next-scanner": "^4.6.0",
     "lint-staged": "^15.2.10",
     "minimist": "^1.2.8",
@@ -183,7 +183,7 @@
     "playwright-slack-report": "^1.1.88",
     "prettier": "^3.3.3",
     "prompts": "^2.4.2",
-    "react-cosmos": "6.2.0",
+    "react-cosmos": "^6.2.1",
     "react-cosmos-plugin-vite": "^6.2.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "semver": "^7.6.3",
@@ -194,11 +194,11 @@
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "5.4.10",
+    "vite": "^5.4.11",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
-    "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.4"
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.5"
   },
   "pnpm": {
     "patchedDependencies": {
