feat(20263): init commmit

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@konturio/default-icons": "^2.4.0",
     "@konturio/default-theme": "~3.2.6",
     "@konturio/floating": "^1.1.2",
-    "@konturio/ui-kit": "^5.3.5",
+    "@konturio/ui-kit": "^5.4.0",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@paypal/react-paypal-js": "^8.7.0",
@@ -141,7 +141,9 @@
     "react-promise-suspense": "^0.3.4",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
     "react-transition-group": "^4.4.5",
+    "react-use-scrollspy": "^3.1.1",
     "react-virtuoso": "^4.12.3",
     "recharts": "^2.13.3",
     "utility-types": "^3.11.0",
