--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@codecov/vite-plugin": "^1.6.0",
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.49.1",
+    "@reatom/testing": "^3.4.7",
     "@slack/web-api": "^7.8.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
