--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "happy-dom": "^15.11.7",
     "husky": "^9.1.7",
     "i18next-scanner": "^4.6.0",
+    "jose": "^5.9.6",
     "lint-staged": "^15.2.11",
     "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
