--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "react-promise-suspense": "^0.3.4",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
+    "react-scrollspy-navigation": "^2.0.6",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.12.3",
     "recharts": "^2.15.0",
