--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "test:unit": "pnpm run i18n:import && vitest",
     "coverage": "pnpm run i18n:import && vitest run --coverage",
     "lint": "npm-run-all lint:js lint:css depcruise",
-    "lint:js": "eslint --quiet --ext .tsx,.ts src/",
+    "lint:js": "eslint --quiet src/**/*.{ts,tsx}",
     "lint:css": "stylelint ./src/**/*.css",
-    "lint:i18n:keys:identity": "eslint --ext .json  -c .eslintrc.identical.keys.cjs src/core/localization/translations/",
+    "lint:i18n:keys:identity": "eslint --no-ignore -c eslintrc.identical.keys.mjs src/core/localization/translations/**/*.json",
     "depcruise": "depcruise --config .dependency-cruiser.cjs src",
     "postinstall": "run-s i18n:import",
     "docker:build": "docker build -f ./Dockerfile ./ -t ghcr.io/konturio/disaster-ninja-fe:latest",
@@ -150,6 +150,9 @@
   },
   "devDependencies": {
     "@codecov/vite-plugin": "^1.7.0",
+    "@eslint/compat": "^1.2.4",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
     "@faker-js/faker": "^8.4.1",
     "@fetch-mock/vitest": "^0.2.6",
     "@playwright/test": "^1.49.1",
@@ -168,13 +171,14 @@
     "chalk": "^5.4.1",
     "dependency-cruiser": "^16.8.0",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-i18n-checker": "^1.4.0",
     "eslint-plugin-i18n-json": "^4.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
     "happy-dom": "^16.3.0",
     "husky": "^9.1.7",
     "i18next-scanner": "^4.6.0",
