refactor(apiClient): streamline error handling, enhance token refresh logic, and update documentation

--- a/.cursorignore
+++ b/.cursorignore
@@ -1,20 +1,12 @@
-__fixtures__
 __mocks__
-__test__
-./**/*.fixture.tsx
-./**/fixture/*.*
 .github/workflows/run_e2e_tests.yml
 .helpers
-*.fixture.{ts,tsx}
-**/*.test.{ts,tsx}
 appconfig.js
-configs/*
-cosmos**
-e2e/**
-jest.config.js
-jest.setup.js
-playwright**
-postcss.config.ts
+configs/
+cosmos-export/
+dist/
+e2e/
+node_modules/
 public/
 scripts/
 server/
@@ -23,3 +15,5 @@ vite.config.ts
 vite.proxy.ts
 i18next-scanner.config.cjs
 *.csv
+playwright**
+postcss.config.ts
