--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -21,32 +21,32 @@ jobs:
     needs: build-and-publish
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout CD-repository
+      - name: Checkout CD repository
         uses: actions/checkout@v4
         with:
           repository: konturio/disaster-ninja-cd
           token: ${{ secrets.GITHUB_TOKEN }}
           path: cd
 
-      - name: Install yq
+      - name: Install yq utility
         run: |
           wget -qO /tmp/yq https://github.com/mikefarah/yq/releases/download/v4.34.2/yq_linux_amd64
           chmod +x /tmp/yq
           sudo mv /tmp/yq /usr/local/bin/yq
 
-      - name: Updating image tag in values-dev.yaml
+      - name: Update image tag in values-dev.yaml
         working-directory: cd/helm/disaster-ninja-fe/values
         run: |
           IMAGE_TAG="${{ needs.build-and-publish.outputs.image_tag }}"
           echo "Updating image tag to ${IMAGE_TAG}"
           yq -i ".image.fe.tag = \"${IMAGE_TAG}\"" values-dev.yaml
-          echo "New content of values-dev.yaml:"
+          echo "New contents of values-dev.yaml:"
           cat values-dev.yaml
 
-      - name: Bump Chart version
+      - name: Bump version in Chart.yaml
         working-directory: cd/helm/disaster-ninja-fe
         run: |
-          echo "Current content of Chart.yaml:"
+          echo "Current contents of Chart.yaml:"
           cat Chart.yaml
           CURRENT_VERSION=$(grep '^version:' Chart.yaml | awk '{print $2}')
           IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
@@ -54,18 +54,16 @@ jobs:
           NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
           echo "Updating Chart version from $CURRENT_VERSION to $NEW_VERSION"
           yq -i ".version = \"${NEW_VERSION}\"" Chart.yaml
-          echo "New content of Chart.yaml:"
+          echo "New contents of Chart.yaml:"
           cat Chart.yaml
 
-      - name: Commit and push changes
-        working-directory: cd
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Deploy FE: update image tag to ${{ needs.build-and-publish.outputs.image_tag }} and bump Chart version"
-            git push origin HEAD:main
-          fi
+      - name: Create Pull Request for helm manifest updates
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: 'Deploy FE: update image tag to ${{ needs.build-and-publish.outputs.image_tag }} and bump Chart version'
+          branch: deploy-dn-fe-dev-${{ github.run_id }}
+          title: 'Deploy FE: update image tag to ${{ needs.build-and-publish.outputs.image_tag }} and bump Chart version'
+          body: 'Automatically created PR to update helm manifests with the new image tag.'
+          base: main
+          path: cd
