--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
     "@deck.gl/layers": "^8.9.36",
     "@deck.gl/mapbox": "^8.9.36",
     "@github/mini-throttle": "^2.1.1",
-    "@konturio/default-icons": "^2.4.0",
+    "@konturio/default-icons": "^2.5.0",
     "@konturio/default-theme": "~3.2.6",
-    "@konturio/floating": "^1.1.2",
-    "@konturio/ui-kit": "^5.4.0",
+    "@konturio/floating": "1.2.0",
+    "@konturio/ui-kit": "^5.4.1",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@paypal/react-paypal-js": "^8.7.0",
@@ -144,7 +144,7 @@
     "react-router-dom": "^6.28.0",
     "react-scrollspy-navigation": "^2.0.6",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.12.3",
+    "react-virtuoso": "^4.12.5",
     "recharts": "^2.15.0",
     "utility-types": "^3.11.0",
     "wretch": "^2.11.0"
