feat(docs): add docstring about workflow_call section

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ on:
       - ready_for_review
       - synchronize
   workflow_dispatch:
-  workflow_call:
+  workflow_call: # Enables this workflow to be called from other workflows via the 'workflow_call' event.
+    # In our particular case, we use this to trigger the build from the deploy_dev workflow.
     inputs:
       branch:
         description: 'Branch to build'
