--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ on:
   workflow_dispatch:
   workflow_call: # Enables this workflow to be called from other workflows via the 'workflow_call' event.
     # In our particular case, we use this to trigger the build from the deploy_dev workflow.
+    outputs:
+      image_tag:
+        description: 'Docker image tag'
+        value: ${{ jobs.publish.outputs.image_tag }}
     secrets:
       CODECOV_TOKEN:
         required: true
