--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -77,6 +77,10 @@ jobs:
         working-directory: cd
         run: |
           PR_NUMBER=$(gh pr list --head "deploy-dn-fe-dev-${{ github.run_id }}" --json number --jq '.[0].number')
+          if [ -z "$PR_NUMBER" ]; then  
+            echo "No PR found for branch deploy-dn-fe-dev-${{ github.run_id }}. Exiting."  
+            exit 1  
+          fi  
           echo "Merging PR #$PR_NUMBER"
           gh pr merge $PR_NUMBER --auto --squash --delete-branch
         env:
@@ -91,4 +95,4 @@ jobs:
             Branch: `deploy-dn-fe-dev-${{ github.run_id }}`
             Image Tag: `${{ needs.build-and-publish.outputs.image_tag }}`
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEPLOY_DEV_WEBHOOK_URL }}
