--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: konturio/disaster-ninja-cd
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CD_GITHUB_TOKEN }}
           path: cd
 
       - name: Install yq utility
@@ -80,7 +80,7 @@ jobs:
           if [ -z "$PR_NUMBER" ]; then
             echo "No PR found for branch deploy-dn-fe-dev-${{ github.run_id }}. Exiting."
             exit 1
-          fi  
+          fi
           echo "Merging PR #$PR_NUMBER"
           gh pr merge $PR_NUMBER --auto --squash --delete-branch
         env:
