--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-scrollspy-navigation": "^2.0.6",
+    "react-spring-bottom-sheet": "^3.4.1",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.12.3",
     "recharts": "^2.15.0",
