--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           DOCKER_TAGS="${{ needs.build-and-publish.outputs.image_tag }}"
           IMAGE_TAG="${DOCKER_TAGS##*:}"
-          echo "::set-output name=image_tag::${IMAGE_TAG}"
+          echo "image_tag=${IMAGE_TAG}" >> $GITHUB_OUTPUT
 
       - name: Update image tag in values-dev.yaml
         working-directory: cd/helm/disaster-ninja-fe/values
