--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "keepalive-for-react": "^3.0.8",
     "maplibre-gl": "^3.6.2",
     "markdown-to-jsx": "^7.7.2",
+    "motion": "^12.4.10",
     "nanoid": "^5.0.9",
     "nanoid-dictionary": "^4.3.0",
     "nextafter": "^1.0.0",
@@ -139,6 +140,7 @@
     "react-gtm-module": "^2.0.11",
     "react-i18next": "^15.4.0",
     "react-lazily": "^0.9.2",
+    "react-modal-sheet": "^4.0.1",
     "react-promise-suspense": "^0.3.4",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
